<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.codeblooded.chehra.student.ui.fragments.PreferenceFragment">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="Name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/email" />

                        <TextView
                            android:id="@+id/student"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/student" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/rescan_face_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_tag_faces_grey_24dp"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:minHeight="64dp"
                android:padding="16dp"
                android:text="@string/update_face"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:textColor="#ff666666" />

            <TextView
                android:id="@+id/replay_intro_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_launch_grey_24dp"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:minHeight="64dp"
                android:padding="16dp"
                android:text="@string/replay_intro"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:textColor="#ff666666" />

            <TextView
                android:id="@+id/about_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_about_grey_24dp"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:minHeight="64dp"
                android:padding="16dp"
                android:text="@string/about"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:textColor="#ff666666" />

            <TextView
                android:id="@+id/logout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_logout_red_24dp"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:minHeight="64dp"
                android:padding="16dp"
                android:text="@string/logout"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:textColor="@color/red" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
