<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.codeblooded.chehra.student.ui.fragments.CoursesFragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:clipToPadding="false"
            android:contentInsetEnd="8dp"
            android:contentInsetLeft="8dp"
            android:contentInsetRight="8dp"
            android:contentInsetStart="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:contentInsetEnd="8dp"
            app:contentInsetLeft="8dp"
            app:contentInsetRight="8dp"
            app:contentInsetStart="8dp">

            <android.support.v7.widget.SearchView
                android:id="@+id/searchView"
                style="@style/Widget.AppCompat.SearchView.ActionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_light_background"
                android:clickable="true"
                android:elevation="4dp"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:defaultQueryHint="@string/search_courses"
                app:iconifiedByDefault="false"
                app:queryHint="@string/search_courses" />

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enrolled" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</LinearLayout>
